# clippyb

./: .gitignore  GEMINI_INTEGRATION_COMPLETE.md  GEMINI_INTEGRATION_SUCCESS.md  REFLECTION.md  RUN-CLIPPYB.bat  SOLUTION_SUMMARY.md  SPOTIFY_SETUP.md  WARP.md  add-defender-exclusions.ps1  build-windows.bat  debug-run.bat  launch-app.bat  launch-clippyb.bat  nco.txt  nco2.txt  package-lock.json  package.json  pnpm-lock.yaml  run-app.bat  run-simple.bat  run.bat  speed-optimizations.md  test-app.bat  test-debug.bat  test-speed.ps1  test-webview.bat  test_extractor.py  test_gemini_direct.rs  test_input.txt  test_schema.py  test_schema.rs  test_song_download.py  test_spotify_urls.txt  vite.config.ts  webview2-fix.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download_queue.rs  lib_test.rs  main.rs  main_minimal.rs  main_simple.rs  simple_test.rs  test.rs  test_main.rs
src-tauri/src/agents/: gemini_coordinator.rs  gemini_direct.rs  mod.rs  pipeline_agents.rs  rig_agents.rs  rig_agents_v2.rs  rig_coordinator.rs  rig_coordinator_v2.rs  rig_extractors.rs  simple_metadata_extractor.rs  youtube_search.rs
src-tauri/src/queue/: mod.rs  persistent_queue.rs  queue_item.rs  queue_processor.rs
src-tauri/src/utils/: fuzzy_match.rs  llm_utils.rs  mod.rs  rate_limiter.rs  retry.rs  smart_limiter.rs
src-tauri/target-windows/: .rustc_info.json
src-tauri/target-windows/debug/.fingerprint/autocfg-9cca76dae241d79d/: lib-autocfg  lib-autocfg.json
src-tauri/target-windows/debug/.fingerprint/cfg-if-42113be1e2cbf433/: lib-cfg_if  (+1 more)
src-tauri/target_new/: .rustc_info.json
(+950 files in other folders)
